changes to button

--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -15,9 +15,8 @@
     src: url('./fonts/slick.eot');
     src: url('./fonts/slick.eot?#iefix') format('embedded-opentype'), url('./fonts/slick.woff') format('woff'), url('./fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
 }
-/* Arrows */
-.slick-prev,
-.slick-next
+ /*Arrows */
+.slick-prev
 {
     font-size: 0;
     line-height: 0;
@@ -40,6 +39,20 @@
     border: none;
     outline: none;
     background: transparent;
+}
+
+.slick-next{
+    font-size: 0;
+    line-height: 0;
+    position: absolute;
+    top: 48%;
+    display: block;
+    cursor: pointer;
+    color: transparent;
+    border: none;
+    outline: none;
+    background: transparent;
+
 }
 .slick-prev:hover,
 .slick-prev:focus,
@@ -72,7 +85,7 @@
     line-height: 1;
 
     opacity: .75;
-    color: white;
+    color: #EE964B;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -115,6 +128,7 @@
     content: '←';
 }
 
+
 /* Dots */
 .slick-dotted.slick-slider
 {
@@ -156,8 +170,8 @@
 
     display: block;
 
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     padding: 5px;
 
     cursor: pointer;
