added photos to homepage

--- a/styles/style.css
+++ b/styles/style.css
@@ -232,6 +232,7 @@ blockquote{
     line-height: 3em;
 }
 
+
 .cta-section {
     margin: auto;
     line-height: 3em;
@@ -270,6 +271,12 @@ a:visited .chinatown-button{
     display: none;
 }
 
+.covid-restaurant-image{
+    width: 100%;
+    margin: auto;
+    max-width: 350px;
+    padding: 1rem;
+}
 
 /* restaurant specific css */
 
