added changes to carousel buttons

--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -85,7 +85,7 @@
     line-height: 1;
 
     opacity: .75;
-    color: #ADA79B;
+    color: #000000;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
