changes to color of span

--- a/styles/style.css
+++ b/styles/style.css
@@ -136,11 +136,11 @@ nav ul {
   
 
 .header-span{
-    color: #1D1D1B
+    color: #837E75;
 }
 
 span{
-  color: #837E75;
+  color: #ADA79B;
 }
 
 .homepage-introduction{
