--- a/styles/style.css
+++ b/styles/style.css
@@ -210,7 +210,7 @@ span{
     p{
     font-size: 1.1em;
     font-family: 'Oxygen', sans-serif;
-    color: #5F5B54;
+    color: #34322D;;
     }
     
 
